d: Added create piece
